# motiva

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  lcov.info  pyproject.toml
.cargo/: config.toml
.github/: codecov.yml  dependabot.yml
.github/scripts/: featuresets.py
.github/workflows/: build.yml  commit.yml  docker.yml  main.yml  pr.yml  release.yml  tag.yml
benches/: scoring.rs
crates/libmotiva/: Cargo.toml  README.md
crates/libmotiva/assets/excerpts/rigour_data/names/: persons.txt
crates/libmotiva/assets/excerpts/rigour_data/territories/: data.jsonl
crates/libmotiva/benches/: scoring.rs
crates/libmotiva/src/: catalog.rs  error.rs  fetcher.rs  lib.rs  model.rs  motiva.rs  nested.rs  schemas.rs  scoring.rs
crates/libmotiva/src/index/: elastic.rs  mock.rs  mod.rs
crates/libmotiva/src/index/elastic/: builder.rs  config.rs  mod.rs  queries.rs  scoped.rs  version.rs
crates/libmotiva/src/matching/: comparers.rs  explanation.rs  extractors.rs  latinize.rs  logic_v1.rs  marble_v0.rs  mod.rs  name_based.rs  name_qualified.rs  validators.rs
crates/libmotiva/src/matching/matchers/: address.rs  crypto_wallet.rs  dates.rs  identifier.rs  jaro_winkler.rs  marble.rs  match_.rs  mismatch.rs  mod.rs  name_fingerprint_levenshtein.rs  name_literal_match.rs  orgid_mismatch.rs  phonetic.rs  soundex.rs
crates/libmotiva/src/matching/replacers/: addresses.rs  company_types.rs  mod.rs  ordinals.rs  stopwords.rs  symbols.rs
crates/libmotiva/src/matching/tests/: comprehensive.rs  mod.rs
crates/libmotiva/src/symbols/: mod.rs  tagger.rs
crates/libmotiva/src/tests/: mod.rs  python.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/motiva/: Cargo.toml  build.rs
crates/motiva/src/: main.rs  oneoff.rs  trace.rs
crates/motiva/src/api/: config.rs  dto.rs  errors.rs  mod.rs
crates/motiva/src/api/handlers/: catalog.rs  get_entity.rs  match_entities.rs  mod.rs  proxy.rs
crates/motiva/src/api/middlewares/: auth.rs  logging.rs  mod.rs  types.rs
crates/motiva/src/tests/: api.rs  log_writer.rs  middlewares.rs  mod.rs
crates/motiva/src/tests/e2e/: mod.rs
crates/motiva/src/tests/e2e/specs/: match.hurl  misc.hurl  params.hurl  retrieval.hurl
crates/motiva/tests/: motiva.rs
macros/src/: lib.rs
src/: catalog.rs  lib.rs  main.rs  model.rs  schemas.rs  scoring.rs  search.rs  trace.rs
src/api/: config.rs  dto.rs  errors.rs  handlers.rs  mod.rs
src/api/handlers/: get_entity.rs  match_entities.rs  mod.rs  proxy.rs
src/api/middlewares/: json_rejection.rs  logging.rs
src/index/: get.rs  mod.rs  search.rs
src/matching/: comparers.rs  extractors.rs  logic_v1.rs  mod.rs  name_based.rs  name_qualified.rs  utils.rs  validators.rs
src/matching/matchers/: address.rs  crypto_wallet.rs  identifier.rs  jaro_winkler.rs  match_.rs  mismatch.rs  mod.rs  name_fingerprint_levenshtein.rs  name_literal_match.rs  orgid_mismatch.rs  phonetic.rs  soundex.rs
src/matching/replacers/: addresses.rs  company_types.rs  mod.rs  ordinals.rs  stopwords.rs  symbols.rs
src/tests/: api.rs  mod.rs  python.rs
