[package]
name = "motiva"
version = "0.1.0"
edition = "2024"

[profile.release]
# lto = "fat"
# codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 1

[dependencies]
macros = { path = "./macros" }

any_ascii = "0.3.3"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["query"] }
elasticsearch = { version = "9.1.0-alpha.1", default-features = false, features = [
    "rustls-tls",
] }
itertools = "0.14.0"
jiff = { version = "0.2.15", features = ["serde"] }
rayon = "1.10.0"
rphonetic = "3.0.3"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
strsim = "0.11.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "json",
    "std",
    "fmt",
    "env-filter",
] }
unicode-normalization = "0.1.24"
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
compact_str = "0.9.0"
reqwest = "0.12.22"
tracing-opentelemetry = "0.31.0"
opentelemetry_sdk = "0.30.0"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "metrics", "tonic", "trace"] }
ahash = { version = "0.8.12", features = ["serde"] }
aho-corasick = "1.1.3"
lei = "0.2.5"
regex = "1.11.1"
luhn = "1.0.1"
bumpalo = { version = "3.19.0", features = ["collections"] }
tikv-jemallocator = "0.6.0"
opentelemetry-http = "0.30.0"
serde-inline-default = "0.2.3"

[dev-dependencies]
bon = "3.6.5"
float-cmp = "0.10.0"
pyo3 = { version = "0.25.1" }
serial_test = "3.2.0"
