[project]
name = "motiva"
version = "0.1.0"
description = ""
authors = [
    { name = "Antoine Popineau", email = "antoine.popineau@checkmarble.com" },
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = ["nomenklatura (==4.1.9)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
