[project]
name = "motiva"
version = "0.1.0"
description = ""
authors = [{ name = "Antoine Popineau", email = "antoine.popineau@checkmarble.com" }]
requires-python = ">=3.14,<4.0.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["nomenklatura (==4.1.9)"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = false
