[package]
name = "libmotiva"
version = "0.1.0"
edition = "2024"

[features]
benchmarks = []

[[bench]]
name = "scoring"
harness = false
required-features = ["benchmarks"]

[dependencies]
macros = { path = "../macros" }

any_ascii = "0.3.3"
anyhow = "1.0.98"
elasticsearch = { version = "9.1.0-alpha.1", default-features = false, features = [
    "rustls-tls",
] }
itertools = "0.14.0"
jiff = { version = "0.2.15", features = ["serde"] }
rphonetic = "3.0.3"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
strsim = "0.11.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1" }
tracing = "0.1.41"
unicode-normalization = "0.1.24"
validator = { version = "0.20.0", features = ["derive"] }
compact_str = "0.9.0"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
] }
opentelemetry = { version = "0.30.0", features = ["trace"] }
ahash = { version = "0.8.12", features = ["serde"] }
aho-corasick = "1.1.3"
lei = "0.2.5"
regex = "1.11.1"
luhn = "1.0.1"
bumpalo = { version = "3.19.0", features = ["collections"] }
serde-inline-default = "0.2.3"
bon = { version = "3.6.5" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
float-cmp = "0.10.0"
pyo3 = { version = "0.25.1" }
serial_test = "3.2.0"
tokio-test = "0.4.4"
