[package]
name = "libmotiva"
description = "Sanctioned entities matching utilities"
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"

authors = ["Antoine POPINEAU"]
homepage = "https://github.com/apognu/motiva"
repository = "https://github.com/apognu/motiva"
documentation = "https://docs.rs/libmotiva"

[features]
icu = ["rust_icu_utrans", "rust_icu_sys"]
benchmarks = []

[[bench]]
name = "scoring"
harness = false
required-features = ["benchmarks"]

[dependencies]
libmotiva-macros = "0.1.0"

any_ascii = "0.3.3"
anyhow = "1.0.98"
elasticsearch = { version = "9.1.0-alpha.1", default-features = false, features = [
    "rustls-tls",
] }
itertools = "0.14.0"
jiff = { version = "0.2.15", features = ["serde"] }
rphonetic = "3.0.3"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
strsim = "0.11.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1" }
tracing = "0.1.41"
unicode-normalization = "0.1.24"
validator = { version = "0.20.0", features = ["derive"] }
compact_str = "0.9.0"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
] }
opentelemetry = { version = "0.31.0", features = ["trace"] }
ahash = { version = "0.8.12", features = ["serde"] }
aho-corasick = "1.1.3"
lei = "0.2.5"
regex = "1.11.1"
luhn = "1.0.1"
bumpalo = { version = "3.19.0", features = ["collections"] }
serde-inline-default = "1.0.0"
bon = { version = "3.6.5" }
metrics = "0.24.2"
whatlang = "0.18.0"

rust_icu_sys = { version = "5.1.0", optional = true }
rust_icu_utrans = { version = "5.1.0", optional = true }
unicode-general-category = "1.1.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
float-cmp = "0.10.0"
pyo3 = { version = "0.27.1" }
serde-json-assert = "0.4.0"
serial_test = "3.2.0"
std-macro-extensions = "0.26.8"
tokio-test = "0.4.4"
wiremock = "0.6.5"
