[package]
name = "libmotiva"
description = "Sanctioned entities matching utilities"
version = "0.3.0"
edition = "2024"
license = "MIT"
readme = "README.md"

authors = ["Antoine POPINEAU"]
homepage = "https://github.com/apognu/motiva"
repository = "https://github.com/apognu/motiva"
documentation = "https://docs.rs/libmotiva"

[features]
icu = ["rust_icu_utrans", "rust_icu_sys"]
benchmarks = []

[dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
aho-corasick = "1.1.3"
any_ascii = "0.3.3"
anyhow = "1.0.98"
bon = { version = "3.6.5" }
bumpalo = { version = "3.19.0", features = ["collections"] }
celes = "2.8.2"
compact_str = "0.10.0"
elasticsearch = { version = "9.1.0-alpha.1", default-features = false, features = [
    "rustls-tls",
] }
itertools = "0.15.0"
jiff = { version = "0.2.15", features = ["serde"] }
lei = "0.2.5"
libmotiva-macros = { version = "0.2.0", path = "../macros" }
luhn = "1.0.1"
metrics = "0.24.2"
opentelemetry = { version = "0.32.0", features = ["trace"] }
rand = "0.10.1"
regex = "1.11.1"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json"] }
rphonetic = "3.0.3"
rust-embed = "8.9.0"

rust_icu_sys = { version = "5.1.0", optional = true }
rust_icu_utrans = { version = "5.1.0", optional = true }

serde = { version = "1.0.219", features = ["rc"] }
serde-inline-default = "1.0.0"
serde-jsonlines = "0.7.0"
serde_json = "1.0.141"
serde_yaml = "0.9.34"
shellexpand = "3.1.2"
strsim = "0.11.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1" }
tracing = "0.1.41"
unaccent = "0.1.1"
unicode-general-category = "1.1.0"
unicode-normalization = "0.1.24"
validator = { version = "0.20.0", features = ["derive"] }
whatlang = "0.18.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async_tokio"] }
float-cmp = "0.10.0"
pyo3 = { version = "0.29.0" }
serde-json-assert = "0.4.0"
serial_test = "3.2.0"
std-macro-extensions = "^1"
tokio-test = "0.4.4"
wiremock = "0.6.5"

[[bench]]
name = "scoring"
harness = false
required-features = ["benchmarks"]

[lints]
workspace = true
