[package]
name = "libmotiva-macros"
description = "Macros used by the libmotiva crate"
version = "0.1.0"
edition = "2024"
license = "MIT"

authors = ["Antoine POPINEAU"]
homepage = "https://github.com/apognu/motiva"
repository = "https://github.com/apognu/motiva"

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
