[package]
name = "motiva"
version = "0.1.0"
edition = "2024"

[features]
benchmarks = []
gcp = ["gcp_auth", "opentelemetry-gcloud-trace"]

[dependencies]
libmotiva = { path = "../libmotiva" }
macros = { path = "../macros" }

any_ascii = "0.3.3"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["query", "typed-header"] }
itertools = "0.14.0"
jiff = { version = "0.2.15", features = ["serde"] }
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.141"
strsim = "0.11.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = [
    "json",
    "std",
    "fmt",
    "env-filter",
] }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
] }
tracing-opentelemetry = "0.31.0"
opentelemetry_sdk = "0.30.0"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0", features = [
    "grpc-tonic",
    "metrics",
    "tonic",
    "trace",
] }
ahash = { version = "0.8.12", features = ["serde"] }
opentelemetry-http = "0.30.0"
serde-inline-default = "0.2.3"
mimalloc = { version = "0.1.48", features = ["v3"] }
opentelemetry-gcloud-trace = { version = "0.21.0", optional = true }
gcp_auth = { version = "0.12.3", optional = true }
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = ["http-listener"] }
axum-macros = "0.5.0"

[dev-dependencies]
axum-test = "18.0.2"
serial_test = "3.2.0"
