[package]
name = "motiva"
description = "Sanctioned entities matching API"
version = "0.1.0"
edition = "2024"
license = "MIT"

authors = ["Antoine POPINEAU"]
homepage = "https://github.com/apognu/motiva"
repository = "https://github.com/apognu/motiva"

[features]
icu = ["libmotiva/icu"]
gcp = ["gcp_auth", "opentelemetry-gcloud-trace"]
benchmarks = []

[dependencies]
libmotiva = { path = "../libmotiva" }

any_ascii = "0.3.3"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["query", "typed-header"] }
itertools = "0.14.0"
jiff = { version = "0.2.15", features = ["serde"] }
serde = { version = "1.0.219", features = ["rc"] }
serde_json = "1.0.141"
strsim = "0.11.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = [
    "json",
    "std",
    "fmt",
    "env-filter",
] }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.13.1", default-features = false }
tracing-opentelemetry = "0.32.0"
opentelemetry_sdk = "0.31.0"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "metrics",
    "tonic",
    "trace",
] }
ahash = { version = "0.8.12", features = ["serde"] }
opentelemetry-http = "0.31.0"
serde-inline-default = "1.0.0"
mimalloc = { version = "0.1.48", features = ["v3"] }
opentelemetry-gcloud-trace = { version = "0.22.0", optional = true }
gcp_auth = { version = "0.12.3", optional = true }
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, features = ["http-listener"] }
axum-macros = "0.5.0"
json-subscriber = "0.2.6"

[dev-dependencies]
axum-test = "18.0.2"
nix = { version = "0.30.1", features = ["signal"] }
rusty-fork = "0.3.1"
serde-json-assert = "0.4.0"
serial_test = "3.2.0"

[lints]
workspace = true
