[package]
name = "motiva"
description = "Sanctioned entities matching API"
edition = "2024"
license = "MIT"

authors = ["Antoine POPINEAU"]
homepage = "https://github.com/apognu/motiva"
repository = "https://github.com/apognu/motiva"

[features]
icu = ["libmotiva/icu"]
gcp = ["gcp_auth", "opentelemetry-gcloud-trace"]
benchmarks = []

[dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["query", "typed-header"] }
axum-macros = "0.5.0"
gcp_auth = { version = "0.12.3", features = ["aws-lc-rs"], optional = true }
itertools = "0.15.0"
jiff = { version = "0.2.15", features = ["serde"] }
json-subscriber = "0.3.0"
libmotiva = { path = "../libmotiva" }
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, features = ["http-listener"] }
mimalloc = { version = "0.1.52" }
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry-gcloud-trace = { version = "0.24", optional = true }
opentelemetry-http = "0.32"
opentelemetry-otlp = { version = "0.32", features = [
    "grpc-tonic",
    "metrics",
    "tonic",
    "trace",
] }
opentelemetry_sdk = "0.32"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json"] }
rustls = "^0.23"
serde = { version = "1.0.219", features = ["rc"] }
serde-inline-default = "1.0.0"
serde_json = "1.0.141"
shadow-rs = "2.0.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.7.0", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3.20", features = [
    "json",
    "std",
    "fmt",
    "env-filter",
] }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
shadow-rs = "2.0.0"

[dev-dependencies]
axum-test = "21.0.0"
glob = "0.3.3"
hurl = "8.0.1"
hurl_core = "8.0.1"
nix = { version = "0.31.2", features = ["signal"] }
rusty-fork = "0.3.1"
serde-json-assert = "0.4.0"
serial_test = "3.2.0"

[lints]
workspace = true
